Fixed vertical scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -360,7 +360,7 @@ h1 a:active {
 	top: 1px;
 }
 
-::-webkit-scrollbar {height: 4px;}
+::-webkit-scrollbar {width: 4px; height: 4px;}
 ::-webkit-scrollbar-track {
 	box-shadow: inset 0 0 0 4px rgba(0,0,0,.7);
     -webkit-border-radius: 2px;
@@ -369,6 +369,12 @@ h1 a:active {
     -webkit-border-radius: 2px;
     border-radius: 2px;
     background: rgba(255,255,255,1);}
+::-webkit-scrollbar-corner {
+    background-color: transparent;}
+::-webkit-scrollbar-button {
+    width: 0;
+    height: 0;
+    display: none;}
 
 .new ::-webkit-scrollbar-thumb,
 .new ::-webkit-scrollbar-track,
